--- a/app/views/admin.html
+++ b/app/views/admin.html
@@ -171,6 +171,20 @@
             </div>
         </div>
         <?php } ?>
+    <!-- Internal Script -->
+    <script>
+        const imgOnErrorList = document.querySelectorAll('img[alt]');
+        imgOnErrorList.forEach(errorImg => {
+            errorImg.addEventListener('error', function(e) {
+                let altValue = '(Gambar Rusak) '+this.getAttribute('alt'),
+                    alt = document.createTextNode(altValue);
+                if (alt.length > 0) {
+                    this.parentNode.insertBefore(alt,this);
+                    this.parentNode.removeChild(this);
+                }
+            });
+        });
+    </script>
     <!-- Vendor Script -->
     <script src="/vendors/jquery/dist/jquery.min.js"></script>
     <script src="/vendors/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
