--- a/app/views/auth.html
+++ b/app/views/auth.html
@@ -130,6 +130,20 @@
     </div>
     <?php } ?>
 </body>
+<!-- Internal Script -->
+<script>
+    const imgOnErrorList = document.querySelectorAll('img[alt]');
+    imgOnErrorList.forEach(errorImg => {
+        errorImg.addEventListener('error', function(e) {
+            let altValue = '(Gambar Rusak) '+this.getAttribute('alt'),
+                alt = document.createTextNode(altValue);
+            if (alt.length > 0) {
+                this.parentNode.insertBefore(alt,this);
+                this.parentNode.removeChild(this);
+            }
+        });
+    });
+</script>
 <script src="/vendors/jquery/dist/jquery.min.js"></script>
 <script src="/vendors/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <script src="/vendors/js-cookie/js.cookie.js"></script>
