--- a/app/views/default/bantuan/detil.html
+++ b/app/views/default/bantuan/detil.html
@@ -1,110 +1,87 @@
-<section class="bantuan-area">
-    <div class="col-12 app-image bg-image overflow-hidden align-items-center justify-content-center">
-        <img src="<?= $data['detil_bantuan']->path_gambar; ?>" alt="<?= $data['detil_bantuan']->nama_gambar; ?>">
-    </div>
-    <div class="col-12 box-donasi-info">
-        <div class="container">
-            <div class="row my-3 g-md-2 g-lg-3 gap-3 gap-md-0">
-                <div class="col-lg col-md-3 col-6">
-                    <div class="box bg-light rounded-box p-3 d-flex">
-                        <div class="box-icon bg-primary">
-                            <i class="lni lni-wallet"></i>
-                        </div>
-                        <div class="box-info d-flex justify-content-center flex-column">
-                            <h6 class="mb-0 countUp" data-target="<?= $data['detil_bantuan']->total_donasi ?>"></h6>
-                            <p><small class="text-muted">Terkumpul</small></p>
-                        </div>
+<div id="detil-banner-area">
+    <div class="container">
+        <div class="row" id="visual-banner-area">
+            <div class="col">
+                <div class="app-image img-wrapper d-flex align-items-center justify-content-center overflow-hidden rounded-box wow fadeInUp shadow-none" data-wow-delay=".2s">
+                    <img src="<?= $data['detil_bantuan']->path_gambar; ?>" alt="Gambar <?= $data['detil_bantuan']->nama_gambar; ?>" class="img-fluid d-none d-lg-flex">
+                    <img src="<?= $data['detil_bantuan']->path_gambar; ?>" alt="Gambar <?= $data['detil_bantuan']->nama_gambar; ?>" class="img-fluid d-flex d-lg-none">
+                </div>
+            </div>
+        </div>
+        <div class="row gap-3 mx-0 flex-wrap custom-for-col-md-6 mt-4 toggle" data-start-delay-wow="0.4" id="info-box-area">
+            <div data-wow-delay=".4s" class="align-items-center wow fadeInUp col box bg-light p-3 d-flex rounded-box order-1 shadow-none">
+                <div class="box-icon bg-primary">
+                    <i class="lni lni-wallet"></i>
+                </div>
+                <div class="box-info d-flex flex-column">
+                    <h6 class="mb-0" data-count-up-value="<?= $data['detil_bantuan']->total_donasi ?>">0</h6>
+                    <p><small class="text-muted">Terkumpul</small></p>
+                </div>
+            </div>
+            <div data-wow-delay=".6s" class="align-items-center wow fadeInUp col box bg-light p-3 d-flex rounded-box order-1 shadow-none">
+                <div class="box-icon bg-info">
+                    <i class="lni lni-handshake"></i>
+                </div>
+                <div class="box-info d-flex flex-column">
+                    <h6 class="mb-0" data-count-up-value="<?= $data['detil_bantuan']->jumlah_donatur ?>">0</h6>
+                    <p><small class="text-muted">Donatur</small></p>
+                </div>
+            </div>
+            <div data-wow-delay=".8s" class="align-items-center wow fadeInUp col-12 col-md box bg-light p-3 d-flex rounded-box order-1 shadow-none">
+                <div class="box-icon bg-orange">
+                    <i class="lni lni-target-customer"></i>
+                </div>
+                <div class="box-info d-flex flex-column">
+                    <h6 class="mb-0" <?= ((strtolower($data['detil_bantuan']->jumlah_target) != 'unlimited') ? 'data-count-up-value="' . $data['detil_bantuan']->jumlah_target . '">' : '>' . $data['detil_bantuan']->jumlah_target); ?></h6>
+                    <p><small class="text-muted">Target</small></p>
+                </div>
+            </div>
+            <div data-wow-delay="1s" class="align-items-center wow fadeInUp col-md-6 col-lg box bg-light p-3 d-grid rounded-box progress-box order-0 order-md-1 shadow-none">
+                <div class="box-icon bg-green">
+                    <i class="lni lni-grow"></i>
+                </div>
+                <div class="box-info d-flex flex-column">
+                    <h6 class="mb-0" data-count-up-value="<?= $data['detil_bantuan']->donasi_terlaksana ?>">0</h6>
+                    <p><small class="text-muted">Paket Sembako Tersalurkan</small></p>
+                    <div class="progress mt-1">
+                        <div class="progress-bar bg-green" role="progressbar" aria-valuemin="0" aria-valuemax="100" style="width: 0%" aria-valuenow="<?= $data['detil_bantuan']->persentase_pelaksanaan; ?>"></div>
                     </div>
                 </div>
-                <div class="col-lg col-md-3 col-6">
-                    <div class="box bg-light rounded-box p-3 d-flex">
-                        <div class="box-icon bg-info">
-                            <i class="lni lni-handshake"></i>
-                        </div>
-                        <div class="box-info d-flex justify-content-center flex-column">
-                            <h6 class="mb-0 countUp" data-target="<?= $data['detil_bantuan']->jumlah_donatur ?>"></h6>
-                            <p><small class="text-muted">Donatur</small></p>
-                        </div>
+            </div>
+            <div data-wow-delay="1s" class="align-items-center wow fadeInUp col-md-6 col-lg box bg-light p-3 d-grid rounded-box timeup order-0 order-md-1 shadow-none">
+                <div class="box-icon bg-warning">
+                    <i class="lni lni-timer"></i>
+                </div>
+                <div class="box-info d-flex flex-column">
+                    <h6 class="mb-0" <?= ((strtolower($data['detil_bantuan']->sisa_waktu) != 'unlimited') ? 'data-count-up-value="' . $data['detil_bantuan']->sisa_waktu .'" data-count-up-date="true">' : '>' . $data['detil_bantuan']->sisa_waktu); ?>Tanpa Batas</h6>
+                    <p><small class="text-muted">Sisa Waktu</small></p>
+                    <div class="d-flex justify-content-between text-primary align-items-center d-md-none collapseButton mt-1 toggle">
+                        <span>Sembunyikan detil</span>
+                        <i class="lni lni-chevron-down" style="transform: rotate(90deg); transition: transform 0.3s ease 0s;"></i>
                     </div>
                 </div>
-                <div class="col-lg col-md-3 col-6">
-                    <div class="box bg-light rounded-box p-3 d-flex">
-                        <div class="box-icon bg-orange">
-                            <i class="lni lni-target-customer"></i>
-                        </div>
-                        <div class="box-info d-flex justify-content-center flex-column">
-                            <h6 class="mb-0 countUp" <?=(strtolower($data['detil_bantuan']->jumlah_target) !=
-                                'unlimited') ? 'data-target="' . $data['detil_bantuan']->jumlah_target . '">' : '>' .
-                                $data['detil_bantuan']->jumlah_target ?></h6>
-                            <p><small class="text-muted">Target</small></p>
-                        </div>
+            </div>
+        </div>
+        <div class="row g-0 gap-3 gap-md-4 bg-white position-relative pt-4" id="commit-bantuan-area" data-start-delay-wow="1.2">
+            <div class="col justify-content-center d-flex wow fadeInUp bg-light rounded-box align-items-center py-4" data-wow-delay="1.2s">
+                <div class="text-center">
+                    <div class="logo border-1 rounded-box bg-white overflow-hidden border border-light shadow-none">
+                        <img src="<?= $data['detil_bantuan']->path_gambar_logo_pengaju_bantuan; ?>" alt="Logo <?= $data['detil_bantuan']->pengaju_bantuan; ?>">
                     </div>
+                    <h6 class="mt-3 text-black fw-bold"><?= $data['detil_bantuan']->pengaju_bantuan; ?></h6>
                 </div>
-                <div class="col-lg col-md-3 col-12 order-1">
-                    <div class="box bg-light rounded-box p-3 d-flex flex-wrap prog">
-                        <div class="box-icon bg-green">
-                            <i class="lni lni-grow"></i>
-                        </div>
-                        <div class="box-info d-flex justify-content-center flex-column">
-                            <h6 class="mb-0 countUp" data-target="<?= $data['detil_bantuan']->donasi_terlaksana ?>">
-                            </h6>
-                            <p><small class="text-muted">Tersalurkan</small></p>
-                        </div>
-                        <div class="col-12">
-                            <div class="progress" style="height: 5px;">
-                                <div class="progress-bar bg-green" role="progressbar"
-                                    aria-valuenow="<?= $data['detil_bantuan']->persentase_pelaksanaan ?>"
-                                    aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-                        </div>
+            </div>
+            <div class="col order-first order-md-last wow fadeInUp" data-wow-delay="1.4s">
+                <div class="row">
+                    <div class="col-12">
+                        <a href="<?= '/donasi/buat/baru/'. $data['detil_bantuan']->id_bantuan; ?>" class="btn button donasi btn-lg w-100 shadow-none">Donasi Sekarang</a>
                     </div>
-                </div>
-                <div class="col-lg col-md-3 col-6">
-                    <div class="box bg-light rounded-box p-3 d-flex">
-                        <div class="d-grid box-info">
-                            <div class="item">
-                                <h6 class="mb-0">Sisa Waktu</h6>
-                            </div>
-                            <div class="item mb-1 mb-lg-2 countUp sisa-waktu" <?=(strtolower($data['detil_bantuan']->
-                                sisa_waktu) != 'unlimited') ? 'data-target="' . $data['detil_bantuan']->sisa_waktu .'">'
-                                : '>' . $data['detil_bantuan']->sisa_waktu ?></div>
-                        </div>
+                    <div class="col-12">
+                        <h5 class="mb-3 mt-5"><?= $data['detil_bantuan']->nama; ?></h5>
+                        <p class="fs-6 lh-lg"><?= $data['detil_bantuan']->deskripsi; ?></p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="col bg-light box-bantuan-info">
-        <div class="container py-4">
-            <div class="row py-3 gap-5 gap-md-0">
-                <div class="col-md-6 col-12 justify-content-center d-flex">
-                    <div class="text-center">
-                        <div class="logo border-1 rounded-circle bg-white">
-                            <img src="<?= $data['detil_bantuan']->path_gambar_logo_pengaju_bantuan ?>"
-                                alt="Logo <?= $data['detil_bantuan']->pengaju_bantuan ?>">
-                        </div>
-                        <h6 class="py-4">
-                            <?= $data['detil_bantuan']->pengaju_bantuan ?>
-                        </h6>
-                    </div>
-                </div>
-                <div class="col-md-6 col-12 order-first order-md-last">
-                    <div class="row">
-                        <div class="col-12">
-                            <a href="/donasi/buat/baru/<?= $data['detil_bantuan']->id_bantuan ?>"
-                                class="btn button donasi btn-lg w-100">Donasi Sekarang</a>
-                        </div>
-                        <div class="col-12">
-                            <h5 class="mb-3 mt-5">
-                                <?= $data['detil_bantuan']->nama ?>
-                            </h5>
-                            <p class="fs-6 lh-lg">
-                                <?= $data['detil_bantuan']->deskripsi ?>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
+</div>
