--- a/app/views/donasi/pembayaran/tb.html
+++ b/app/views/donasi/pembayaran/tb.html
@@ -107,6 +107,9 @@
                                                     <span>Masukan Nominal Transaksi <b class="text-primary"><?= 'Rp. ' . Output::tSparator($data['tagihan_donasi']->jumlah_donasi); ?></b></span>
                                                 </li>
                                                 <li class="list-group-item px-0">
+                                                    <span>Masukan nomor referensi <b class="text-primary"><?= $data['tagihan_donasi']->id_donasi; ?></b> atau bisa juga dikosongkan</span>
+                                                </li>
+                                                <li class="list-group-item px-0">
                                                     <span>Cek Nominal dan Atas Nama Rekening Tujuan <b><?= ucwords(strtolower($data['tagihan_donasi']->atas_nama)); ?>.</b></span>
                                                 </li>
                                                 <li class="list-group-item px-0">
