--- a/app/views/donatur/tagihan/index.html
+++ b/app/views/donatur/tagihan/index.html
@@ -1,75 +1,3 @@
-<!-- <div class="row justify-center">
-    <div class="col">
-        <div class="card">
-            <div class="card-header bg-transparent">
-                <div class="row align-items-center">
-                    <div class="col">
-                        <h3 class="mb-0">Tagihan Ku</h3>
-                    </div>
-                </div>
-            </div>
-            <div class="table-responsive">
-                <table class="table">
-                    <thead class="thead-light">
-                        <tr>
-                            <th scope="col" class="sort" data-sort="budget">Nama Bantuan</th>
-                            <th scope="col" class="sort" data-sort="nominal_donasi">Donasi</th>
-                            <th scope="col" class="sort" data-sort="status">Status Bayar</th>
-                            <th scope="col" class="sort" data-sort="status">Dibuat Sejak</th>
-                            <th scope="col"></th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <?php if (!is_null($data['tagihan_unpaid']['data'])) {
-                            foreach($data['tagihan_unpaid']['data'] as $data_unpaid) { ?>
-                        <tr>
-                            <th scope="row">
-                                <div class="media align-items-center">
-                                    <a href="#">
-                                        <span class="name mb-0 text-sm"><?= $data_unpaid->nama; ?></span>
-                                    </a>
-                                </div>
-                            </th>
-                            <td>
-                                <b><?= $data_unpaid->nominal_donasi; ?></b>
-                            </td>
-                            <td>
-                                <?= $data_unpaid->bayar; ?>
-                            </td>
-                            <td>
-                                <?= Output::timeToLocal($data_unpaid->create_at); ?>
-                            </td>
-                            <td class="text-right">
-                                <div class="dropdown">
-                                    <a class="btn btn-sm btn-icon-only text-light" href="#" role="button"
-                                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        <i class="fas fa-ellipsis-v"></i>
-                                    </a>
-                                    <div class="dropdown-menu dropdown-menu-right dropdown-menu-arrow">
-                                        <a class="dropdown-item" href="/donatur/donasi/data/<?= $data_unpaid->id_donasi; ?>">Lihat Data</a>
-                                        <a class="dropdown-item" href="/donatur/donasi/formulir/<?= $data_unpaid->id_donasi; ?>">Ganti Metode Bayar</a>
-                                    </div>
-                                </div>
-                            </td>
-                        </tr>
-                        <?php }} else {
-                            Ui::tableIsNull(5,'Tagihan (UNPAID)');
-                        } ?>
-                    </tbody>
-                </table>
-            </div>
-            <div class="card-footer py-4">
-                <nav aria-label="...">
-                    <ul class="pagination justify-content-end mb-0">
-                        <?= 
-                            Ui::pageing($this->data['tagihan_unpaid']['halaman'], $this->data['tagihan_unpaid']['record'], 10); 
-                        ?>
-                    </ul>
-                </nav>
-            </div>
-        </div>
-    </div>
-</div> -->
 <div class="row">
     <div class="col-12">
         <div class="card">
@@ -95,9 +23,10 @@
                             <thead class="thead-light">
                                 <tr>
                                     <th scope="col" class="sort" data-sort="budget">Nama Bantuan</th>
-                                    <th scope="col" class="sort" data-sort="nominal_donasi">Donasi</th>
+                                    <th scope="col" class="sort" data-sort="nominal_donasi">Nominal</th>
                                     <th scope="col" class="sort" data-sort="status">Status Bayar</th>
-                                    <th scope="col" class="sort" data-sort="status">Dibuat Sejak</th>
+                                    <th scope="col" class="sort" data-sort="id_cp">Metode Pembayaran Dipilih</th>
+                                    <th scope="col" class="sort" data-sort="create_at">Dibuat Pada</th>
                                     <th scope="col"></th>
                                 </tr>
                             </thead>
@@ -112,14 +41,21 @@
                                             </a>
                                         </div>
                                     </th>
-                                    <td>
-                                        <b><?= $data_unpaid->jumlah_donasi; ?></b>
+                                    <td class="text-right">
+                                        <b><?= Output::tSparator($data_unpaid->jumlah_donasi); ?></b>
                                     </td>
                                     <td>
                                         <?= '<span class="badge badge-pill ' . ($data_unpaid->bayar != 1 ? 'badge-warning">Belum Bayar' : 'badge-success">Sudah Bayar') . '</span>'; ?>
                                     </td>
                                     <td>
-                                        <?= Output::timeToLocal($data_unpaid->create_at); ?>
+                                        <?= '<div class="channel-payment d-flex justify-content-center align-items-end">
+                                            <p class="text-info m-0">'. Utility::keteranganJenisChannelPayment($data_unpaid->jenis) .'</p>
+                                            <img class="img-fluid" src="'. $data_unpaid->path_gambar .'" alt="'. $data_unpaid->nama_cp .'">
+                                        </div>'; 
+                                    ?>
+                                    </td>
+                                    <td>
+                                        <?= Output::strToFullLocalDateTime($data_unpaid->create_at); ?>
                                     </td>
                                     <td class="text-right">
                                         <div class="dropdown">
@@ -128,8 +64,8 @@
                                                 <i class="fas fa-ellipsis-v"></i>
                                             </a>
                                             <div class="dropdown-menu dropdown-menu-right dropdown-menu-arrow">
-                                                <a class="dropdown-item" href="/donatur/donasi/data/<?= $data_unpaid->id_donasi; ?>">Lihat Data</a>
-                                                <?= ($data_unpaid->bayar != 1 ? '<a class="dropdown-item" href="/donatur/donasi/formulir/<?= $data_unpaid->id_donasi; ?>">Ganti Metode Bayar</a>' : '') ?>
+                                                <a class="dropdown-item" href="<?= '/donatur/donasi/data/'. $data_unpaid->id_donasi; ?>">Lihat Data</a>
+                                                <?= ($data_unpaid->bayar != 1 ? '<a class="dropdown-item" href="/donatur/donasi/formulir/'. $data_unpaid->id_donasi .'">Ganti Metode Bayar</a>' : '') ?>
 
                                             </div>
                                         </div>
@@ -157,9 +93,10 @@
                             <thead class="thead-light">
                                 <tr>
                                     <th scope="col" class="sort" data-sort="budget">Nama Bantuan</th>
-                                    <th scope="col" class="sort" data-sort="nominal_donasi">Donasi</th>
+                                    <th scope="col" class="sort" data-sort="nominal_donasi">Nominal</th>
                                     <th scope="col" class="sort" data-sort="status">Status Bayar</th>
-                                    <th scope="col" class="sort" data-sort="status">Dibuat Sejak</th>
+                                    <th scope="col" class="sort" data-sort="id_cp">Metode Pembayaran Terpilih</th>
+                                    <th scope="col" class="sort" data-sort="create_at">Dibuat Pada</th>
                                     <th scope="col"></th>
                                 </tr>
                             </thead>
@@ -174,11 +111,18 @@
                                             </a>
                                         </div>
                                     </th>
-                                    <td>
-                                        <b><?= $data_paid->nominal_donasi; ?></b>
+                                    <td class="text-right">
+                                        <b><?= Output::tSparator($data_paid->nominal_donasi); ?></b>
                                     </td>
                                     <td>
                                         <?= $data_paid->bayar; ?>
+                                    </td>
+                                    <td>
+                                        <?= '<div class="channel-payment d-flex justify-content-center align-items-end">
+                                            <p class="text-info m-0">'. Utility::keteranganJenisChannelPayment($data_paid->jenis) .'</p>
+                                            <img class="img-fluid" src="'. $data_paid->path_gambar .'" alt="'. $data_paid->nama_cp .'">
+                                        </div>'; 
+                                    ?>
                                     </td>
                                     <td>
                                         <?= Output::timeToLocal($data_paid->create_at); ?>
@@ -191,7 +135,6 @@
                                             </a>
                                             <div class="dropdown-menu dropdown-menu-right dropdown-menu-arrow">
                                                 <a class="dropdown-item" href="/donatur/donasi/data/<?= $data_paid->id_donasi; ?>">Lihat Data</a>
-                                                <a class="dropdown-item" href="/donatur/donasi/formulir/<?= $data_paid->id_donasi; ?>">Ganti Metode Bayar</a>
                                             </div>
                                         </div>
                                     </td>
