--- a/public/assets/route/default/core/css/default.css
+++ b/public/assets/route/default/core/css/default.css
@@ -1,49 +1,79 @@
-/*
-* Prefixed by https://autoprefixer.github.io
-* PostCSS: v8.3.6,
-* Autoprefixer: v10.3.1
-* Browsers: last 4 version
-*/
-
-/* App Image Bg */
-
-.app-image>.bg-image {
-    height: 326px;
+div.animation [data-animation-name],
+div.animation .opacity {
+    transition-duration: 0.3s;
+    transition-property: all;
+    transition-timing-function: ease-out;
 }
 
-.app-image>[class*="col"] .img-wrapper {
-    border-radius: inherit;
-    height: inherit;
-    width: 100%;
-}
-
-.app-image>[class*="col"].bg-image>.img-wrapper>img,
-.app-image.img-wrapper>img {
-    transform-origin: center;
-    -webkit-transition: all 0.3s ease-in-out;
-    -o-transition: all 0.3s ease-in-out;
-    transition: all 0.3s ease-in-out;
-}
-
-.app-image>[class*="col"].bg-image:hover>.img-wrapper>img,
-div:hover>.app-image.img-wrapper>img {
+div.animation:hover>.app-image.img-wrapper img[data-animation-name="zoom-in"] {
     transform: scale(1.1);
 }
 
-.img-wrapper.zoom-out>img {
+div.animation>.app-image.img-wrapper img[data-animation-name="zoom-out"] {
     transform: scale(1.1);
 }
 
-div:hover>.img-wrapper.zoom-out>img {
+div.animation:hover>.app-image.img-wrapper img[data-animation-name="zoom-out"] {
     transform: scale(1);
 }
 
-.app-image>[class*="col"].bg-image:hover>.img-wrapper.opacity>img,
-div:hover>.img-wrapper.opacity>img {
-    opacity: .9;
+div.animation:hover>.app-image.img-wrapper img.opacity {
+    opacity: 0.9;
 }
 
-/* End App Image Bg */
+/* Header */
+.header {
+    height: 64px;
+    padding: 10px 0 !important;
+}
+
+.header .navbar-brand img {
+    width: 75px;
+}
+
+.header .navbar-collapse {
+    top: 48px !important;
+    max-height: 80vh;
+}
+
+.header:not(.sticky) .button .signup {
+    background-color: var(--green);
+    color: #fff;
+}
+
+.header:not(.sticky) .button .signin {
+    color: var(--orange) !important;
+}
+
+.header .mobile-menu-btn .toggler-icon {
+    width: 20px;
+    margin: 5px auto;
+    border-radius: 5px;
+}
+
+.header .mobile-menu-btn.active .toggler-icon {
+    border-radius: 50%;
+}
+
+.header .mobile-menu-btn {
+    width: 38px;
+    height: 38px;
+    transition: background-color 0.3s ease;
+}
+
+.header.sticky .mobile-menu-btn {
+    background-color: var(--bs-light);
+}
+
+.header .mobile-menu-btn.active {
+    background-color: transparent !important;
+}
+
+header.header+* {
+    padding: 64px 0px;
+}
+
+/* Akhir Header */
 
 /* Footer */
 .kontak .d-grid {
@@ -52,93 +82,29 @@ div:hover>.img-wrapper.opacity>img {
     gap: 2em;
 }
 
-.kontak a.medsos-icon i {
-    font-size: 50px !important;
-    -webkit-transition: color 0.3s ease-in-out;
-    -o-transition: color 0.3s ease-in-out;
-    transition: color 0.3s ease-in-out;
-}
-
-.kontak a.medsos-icon i[class*="instagram"] {
-    background: #fdf497;
-    background: -o-radial-gradient(30% 107%, circle, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
-    background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
-    background-clip: text;
-    -webkit-background-clip: text;
-}
-
-.kontak a.medsos-icon:hover i[class*="instagram"] {
-    color: transparent !important;
-}
-
-.kontak a.medsos-icon:hover i[class*="twitter"] {
-    color: var(--bs-info) !important;
-}
-
-.kontak a.medsos-icon:hover i[class*="whatsapp"] {
-    color: #4FCE5D !important;
+.kontak .d-grid {
+    place-content: center;
 }
 
 /* Akhir Footer */
 
-/* Box Icon */
-.box {
-    gap: 0.5em;
-}
+@media (min-width: 767px) {}
 
-.box-icon {
-    height: 50px;
-    width: 50px;
-    line-height: 50px;
-    border-radius: 15px;
-    color: #fff;
-    text-align: center;
-    font-size: 30px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-}
-
-/* Akhir Box Icon */
-
-/* Media Query */
-@media (max-width: 1024px) {
-    .app-image>.bg-image {
-        height: 314px;
+@media (min-width: 768px) {
+    .header {
+        height: 80px;
+        padding: 0px !important;
     }
 
-    .box-icon {
-        height: 40px;
-        width: 40px;
-        font-size: 20px;
-    }
-}
-
-@media (max-width: 767px) {
-    .app-image>[class*="col"] .row {
-        margin-left: 0px !important;
-        margin-right: 0px !important;
-        gap: 1em;
-    }
-
-    .box {
-        row-gap: 0.25em;
-    }
-
-    .box-icon {
-        height: 30px;
-        width: 30px;
+    .header .navbar-collapse {
+        top: 56px !important;
     }
 
     .kontak .d-grid {
-        place-content: center;
+        place-content: start;
+    }
+
+    header.header+* {
+        padding: 80px 0px;
     }
 }
-
-/* Akhir Media Query */
